--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       book: 本  #g
+      user: ユーザー  #g
 
     attributes:
       book:
@@ -9,3 +10,10 @@ ja:
         memo: メモ  #g
         picture: 画像  #g
         title: 題名  #g
+      user:
+        email: Eメール  #g
+        password: パスワード  #g
+        password_confirmation: パスワード確認  #g
+        zip_code: 郵便番号  #g
+        address: 住所  #g
+        self_introduction: 自己紹介  #g
